Added favicon and page title/description

--- a/index.html
+++ b/index.html
@@ -2,9 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Food Tracker</title>
+
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+
+    <!-- Meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="An app to track the exact amount fo food you've eaten."
+    />
+    <meta property="og:title" content="Food Tracker" />
+    <meta property="og:site_name" content="Food Tracker" />
+    <meta
+      property="og:description"
+      content="An app to track the exact amount fo food you've eaten."
+    />
+    <meta property="og:locale" content="en_US" />
+    <meta
+      property="og:image"
+      content="https://foodtracker.sidharta.xyz/logo.png"
+    />
+    <meta property="og:url" content="https://foodtracker.sidharta.xyz/" />
   </head>
   <body>
     <div id="root"></div>
